# aether-framework

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.ru.md  SECURITY.md  aether.config.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release.yml
crates/aether_compiler/: Cargo.toml
crates/aether_compiler/src/: codegen.rs  lib.rs  main.rs  parsers.rs
crates/aether_ir/: Cargo.toml
crates/aether_ir/src/: lib.rs
docs/: ABI.md  CASE_STOREFRONT.md  EFFECTS.md  PLUGINS.md  RFC-DSM.md  RFC-EFFECTS.md  RFC-INCREMENTAL.md  RFC-IR.md  RFC-MEMORY.md  ROADMAP_STATUS.md  STANDARD.md  TRY.md
e2e/: smoke.spec.ts
examples/angular-counter/: aether.config.json  app.component.html
examples/basic/: aether-env.d.ts  aether.bindings.json  tsconfig.json
examples/basic/src/: App.tsx  state.ts
examples/lit-counter/: App.ts  aether.config.json
examples/pages-app/: aether.bindings.json  aether.config.json
examples/pages-app/public/: index.html
examples/qwik-counter/: App.tsx  aether.config.json
examples/react-counter/: App.tsx
examples/solid-counter/: App.tsx
examples/svelte-counter/: App.svelte  aether.config.json  state.ts
examples/vue-counter/: App.vue  aether.config.json
schemas/: bindings.schema.json
scripts/: check-map.mjs  doctor.mjs  ensure-compiler.mjs  public-bench.mjs  publish-check.mjs  setup.mjs  smoke-syntax.mjs  smoke.mjs
site/: api.html  bench-results.json  bench.js  guide.html  index.html  sitemap.xml  styles.css  tour-viz.js
(+3 files in other folders)
