[workspace]
resolver = "2"
members = [
    "crates/aether_ir",
    "crates/aether_compiler"
]

# Фиксируем версию serde для предотвращения конфликтов
[workspace.dependencies]
serde = { version = "=1.0.197", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
